--- a/gb/16/10/24/n8425472.md
+++ b/gb/16/10/24/n8425472.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jpwvgr227/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jpwvgr227/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>《铁证如山》反活摘器官研讨会在旧金山举行</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/10/1610232119261160-600x400.jpg" />
 <h6>10月23日，总部设在纽约的追查迫害法轮功国际组织（简称追查国际）代表，应邀在美国旧金山北滩图书馆举办了《铁证如山》——中共大量活摘法轮功学员器官国家犯罪罪证讲座。（李莎/大纪元）
 </h6>
 <hr>
-<p>【大纪元2016年10月24日讯】（大纪元记者林南、马丽美国旧金山报导）随着美国和欧洲相继出台决议案谴责中共活摘<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>学员器官，现今有更多的证人、证据涌现。10月23日，总部设在纽约的追查迫害法轮功国际组织（简称<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E8%BF%BD%E6%9F%A5%E5%9B%BD%E9%99%85.md">追查国际</a>）代表，应邀在美国旧金山北滩图书馆举办了《铁证如山》──中共大量活摘法轮功学员器官国家犯罪罪证讲座。多位与会者向追查国际组织披露中共参与<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98%E5%99%A8%E5%AE%98.md">活摘器官</a>的案例与疑似案例。</p>
-<p><a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E8%BF%BD%E6%9F%A5%E5%9B%BD%E9%99%85.md">追查国际</a>负责人汪志远先生强调：“中共活摘<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>学员器官的案例大量存在；而大量证据共同指证，活摘法轮功学员器官是江泽民下令中共主导的国家犯罪。”</p>
-<p>“海外华人实名举报他们在国内认识的、涉嫌<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98%E5%99%A8%E5%AE%98.md">活摘器官</a>的司法或军队中的人。”与会者高女士说。</p>
+<p>【大纪元2016年10月24日讯】（大纪元记者林南、马丽美国旧金山报导）随着美国和欧洲相继出台决议案谴责中共活摘<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员器官，现今有更多的证人、证据涌现。10月23日，总部设在纽约的追查迫害法轮功国际组织（简称<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BF%BD%E6%9F%A5%E5%9B%BD%E9%99%85.md#1">追查国际</a>）代表，应邀在美国旧金山北滩图书馆举办了《铁证如山》──中共大量活摘法轮功学员器官国家犯罪罪证讲座。多位与会者向追查国际组织披露中共参与<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98%E5%99%A8%E5%AE%98.md#1">活摘器官</a>的案例与疑似案例。</p>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BF%BD%E6%9F%A5%E5%9B%BD%E9%99%85.md#1">追查国际</a>负责人汪志远先生强调：“中共活摘<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员器官的案例大量存在；而大量证据共同指证，活摘法轮功学员器官是江泽民下令中共主导的国家犯罪。”</p>
+<p>“海外华人实名举报他们在国内认识的、涉嫌<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98%E5%99%A8%E5%AE%98.md#1">活摘器官</a>的司法或军队中的人。”与会者高女士说。</p>
 <p><strong>汪志远：中共活摘法轮功学员器官的罪行铁证如山</strong></p>
-<figure id="attachment_8425550" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2016/10/1610232119231160.jpg"><img class="wp-image-8425550" src="https://i.epochtimes.com/assets/uploads/2016/10/1610232119231160-600x335.jpg" width="450" b="251" /></a><figcaption class="wp-caption-text">《铁证如山》——中共大量活摘法轮功学员器官国家犯罪罪证讲座10月23日在美国旧金山北滩图书馆举行。（李莎/大纪元）</figcaption></figure>
+<figure id="attachment_8425550" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/10/1610232119231160.jpg"><img class="wp-image-8425550" src="https://i.epochtimes.com/assets/uploads/2016/10/1610232119231160-600x335.jpg" width="450" b="251" /></a><figcaption class="wp-caption-text">《铁证如山》——中共大量活摘法轮功学员器官国家犯罪罪证讲座10月23日在美国旧金山北滩图书馆举行。（李莎/大纪元）</figcaption></figure>
 <p>追查国际组织的调查发现，1999年以来，以原中共党魁江泽民为首的中共犯罪集团操控整个国家机器，包括党、政、军、武警、司法系统和医疗机构，在全国范围内用活摘器官做移植的方式，对法轮功学员实施灭绝性大屠杀，是江泽民下令中共主导的国家犯罪。性质实为群体灭绝罪、反人类罪。</p>
 <p>汪志远说，包括对5名中共政治局常委、1名军委副主席、政治局委员、国防部长、前军方总后勤部卫生部长等，对中国865家器官移植医院和9500多名移植执业医生的调查取证，获得了重大突破。</p>
 <p>他们采集到两千多个电话录音证据，获取了上万条资料证据。发表了20多万字的综合调查报告，呈现了60个电话调查录音证据，1628个资料证据。</p>
@@ -23,52 +23,62 @@
 <p>汪志远说，中国存在庞大的活人器官供体库。证据包括：中国是器官等人的反向配型，平均等待时间为1-2周；而且热缺血时间为零或超短，因此涉嫌活摘器官。</p>
 <p>基于追查国际针对中国各器官捐献机构的随机调查结果，以及几乎每位被关押的法轮功学员都被强制验血，而2006年中共活摘法轮功学员的黑幕曝光后，在中国全国范围内出现了突击移植现象，大量活人器官紧急促销等等，这些证据让人有理由相信在中国失去人身自由的法轮功学员器官被强摘。</p>
 <p><strong>与会者：北京看守所里大批法轮功学员深夜里被带走</strong></p>
-<figure id="attachment_8425547" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2016/10/1610232119291160.jpg"><img class="wp-image-8425547" src="https://i.epochtimes.com/assets/uploads/2016/10/1610232119291160-600x380.jpg" width="450" b="285" /></a><figcaption class="wp-caption-text">原河南某大学医院担任主管护士的法轮功学员张瀚文（站立者）在研讨会上讲述了2000年一些法轮功学员可能被活摘器官的亲身经历。（李莎/大纪元）</figcaption></figure>
+<figure id="attachment_8425547" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/10/1610232119291160.jpg"><img class="wp-image-8425547" src="https://i.epochtimes.com/assets/uploads/2016/10/1610232119291160-600x380.jpg" width="450" b="285" /></a><figcaption class="wp-caption-text">原河南某大学医院担任主管护士的法轮功学员张瀚文（站立者）在研讨会上讲述了2000年一些法轮功学员可能被活摘器官的亲身经历。（李莎/大纪元）</figcaption></figure>
 <p>原河南某大学医院担任主管护士的法轮功学员张瀚文，在研讨会上讲述了2000年一些法轮功学员可能被活摘器官的亲身经历：因为上访为法轮功说句公道话，包括她自己和20岁的女儿在被关押中分别被编号为“4059”、“4061”。她回忆说，2000年在被北京警察关押的看守所里，还有其他来自不同地区的法轮功学员，她发现常常在半夜时，警察会把一些法轮功学员带走。当时有警察曾威胁，“如果不报身份，就把你们送到很远的地方去，永远回不来。”</p>
 <p>直到后来逃离到海外，张瀚文在2006年读到了《大纪元时报》首次曝光沈阳苏家屯医院关押和活摘法轮功学员器官的文章，以及随后国际调查报告中讲述的九九年后中国的医院里进行大量的器官移植的调查证据后，使她相信当年被半夜转移走的大批法轮功学员很可能都成了罪恶器官交易的被害者。</p>
-<figure id="attachment_8425545" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2016/10/1610232119351160.jpg"><img class="wp-image-8425545" src="https://i.epochtimes.com/assets/uploads/2016/10/1610232119351160-600x389.jpg" width="450" b="292" /></a><figcaption class="wp-caption-text">来自中国四川的法轮功学员李智披露，她家乡的一位男法轮功学员在2000年去北京上访后失踪至今。（李莎/大纪元）</figcaption></figure>
+<figure id="attachment_8425545" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/10/1610232119351160.jpg"><img class="wp-image-8425545" src="https://i.epochtimes.com/assets/uploads/2016/10/1610232119351160-600x389.jpg" width="450" b="292" /></a><figcaption class="wp-caption-text">来自中国四川的法轮功学员李智披露，她家乡的一位男法轮功学员在2000年去北京上访后失踪至今。（李莎/大纪元）</figcaption></figure>
 <p>与会者李智女士说，她家乡的一位男法轮功学员就是在2000年到北京上访后失踪至今。当她向张瀚文描述这位男士的外貌特征时，张瀚文认为，她在被关押的同一地点见过这位男士。而那位男法轮功学员可能真的“永远回不来”，疑被活摘器官并被焚尸灭迹。</p>
 <p><strong>海外华人主动提供中共活摘器官的线索</strong></p>
-<p>6月13日，美国国会众议院一致通过了343号决议案，要求中共立即停止针对法轮功学员和其他良心犯的<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md">强摘器官</a>行为，结束对法轮功的迫害。这项决议案由美国众议院外交关系委员会前主席、共和党资深议员罗斯?雷婷恩和民主党议员杰拉德?康纳利等8位议员共同发起。 2010年美国众议院通过605号决议案，要求中共立即停止迫害法轮功。</p>
+<p>6月13日，美国国会众议院一致通过了343号决议案，要求中共立即停止针对法轮功学员和其他良心犯的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md#1">强摘器官</a>行为，结束对法轮功的迫害。这项决议案由美国众议院外交关系委员会前主席、共和党资深议员罗斯?雷婷恩和民主党议员杰拉德?康纳利等8位议员共同发起。 2010年美国众议院通过605号决议案，要求中共立即停止迫害法轮功。</p>
 <p>7月份，欧洲议会通过议案，欧洲将采取行动，制止发生在中国的反人性的强摘人体器官牟利的罪恶。欧洲在2013年也曾通过议案，谴责中共活摘法轮功学员器官的恶行。</p>
 <p>研讨会上，与会者高女士说，当地华人主动实名举报他们在国内认识的、涉嫌活摘器官的司法或军队中的人。</p>
-<figure id="attachment_8425551" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2016/10/1610232119091160.jpg"><img class="wp-image-8425551" src="https://i.epochtimes.com/assets/uploads/2016/10/1610232119091160-600x400.jpg" width="450" b="300" /></a><figcaption class="wp-caption-text">与会者高女士（左）说，当地华人主动实名举报他们在国内认识的、涉嫌活摘器官的司法或军队中的人。（李莎/大纪元）</figcaption></figure>
+<figure id="attachment_8425551" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/10/1610232119091160.jpg"><img class="wp-image-8425551" src="https://i.epochtimes.com/assets/uploads/2016/10/1610232119091160-600x400.jpg" width="450" b="300" /></a><figcaption class="wp-caption-text">与会者高女士（左）说，当地华人主动实名举报他们在国内认识的、涉嫌活摘器官的司法或军队中的人。（李莎/大纪元）</figcaption></figure>
 <p>责任编辑：苏漾</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/16/10/24/n8425472.htm">《铁证如山》反活摘器官研讨会在旧金山举行</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882278.htm">孙小果被执行死刑 成微博热门话题</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882030.htm">湖北新增349其中武汉615？离奇统计引热议</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882754.htm">【翻墙必看】武汉单日近3万人外逃</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11859313.htm">武汉肺炎疫情升级 各国撤侨一文看懂</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851418.htm">【命理】为什么会身弱多病？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878288.htm">【新闻看点】封城封区封声 习掀“人民战争”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884778.htm">【拍案惊奇】复工企业现集体隔离 病毒或长存</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880584.htm">刘真惊传住院 夫辛龙只称：做健康检查</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/22/n8422847.md#1">组图5：法轮功旧金山游行 吁制止中共活摘器官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/21/n8418950.md#1">德国会人权委员会关注中共大规模强摘器官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/20/n8415226.md#1">觅真：中共抵赖活摘器官的背后是恐惧</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/19/n8411871.md#1">陈思敏：黄洁夫对“活摘器官”的回应苍白无力</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/17/n8404844.md#1">【翻墙必看】中共因活摘器官罪行如坐火山口</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/15/n8400134.md#1">韩国国会论坛聚焦中共活摘器官暴行</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/15/n8400111.md#1">新西兰汽车之旅揭露中共活摘器官罪行</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/14/n8398398.md#1">丹麦《贝林报》专题报导中共活摘器官罪行</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/2/n8359089.md#1">人权活动家谴责中共活摘器官 支持诉江大潮</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/9/26/n8339542.md#1">澳洲昆省汽车之旅传活摘器官真相 媒体关注</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jpwvgr227/djy/blob/master/gb/16/10/24/n8425472.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/21/n8418950.md#1">德国会人权委员会关注中共大规模强摘器官</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/1/n11693550.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（1）</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/24/n8425472.htm">《铁证如山》反活摘器官研讨会在旧金山举行</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/16/10/24/n8425472.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
